<resources>
    <string name="app_name">My Application_Pet Hospital</string>
    <string name="textView1_enter">台北市、新北市(非犬貓))</string>
    <string name="textView2_enter">動物醫院相關資訊</string>
    <string name="textView">市</string>
    <string name="textView2">區</string>
    <string name="textView3">看診時間</string>
    <string name="button_enter">確認</string>
    <string name="button_enter2">確認</string>
    <string name="button_enter4">確認</string>
    <string name="t">市 (City)</string>
    <string name="textVie">區 (Area)</string>
    <string name="textVi">看診時間 (Time)</string>
    <string name="textView4" />
    <string name="textView5" />
    <string name="textView6" />
    <string name="textView7" />
    <string name="textView11" />
    <string name="textView12" />
    <string name="Return_Main">上一頁</string>
    <string name="textView_City" />
    <string name="textView_Area" />
    <string name="textView13" />
    <string name="Return_All_comment">返回</string>
    <string name="Submit_comment">確認</string>
    <string name="textView10">醫師專業度</string>
    <string name="textView15">醫療設備</string>
    <string name="textView16">醫院環境</string>
    <string name="textView19">服務態度</string>
    <string name="textView18">交通便利性</string>
    <string name="textView20" />
    <string name="textView21" />
    <string name="textView22" />
    <string name="textView23" />
    <string name="textView24" />
    <string name="textView25" />
    <string name="textView111" />
    <string name="textView_C" />
    <string name="textView_A" />
    <string name="Return_M">上一頁</string>
    <string name="textView14" />
    <string name="textView_20" />
    <string name="textView27" />
    <string name="textView26" />
    <string name="textView17" />
    <string name="textV" />
    <string name="textView00" />
    <string name="textView0" />
    <string name="textView_Cit" />
    <string name="button_ent">確認</string>
    <string name="radioButton_Bali1">貝貝家畜醫院</string>
    <string name="radioButton_Bali2">麗園動物醫院八里分院</string>
    <string name="button_Be">確認</string>
    <string name="textView8" />
    <string name="textView_W" />
    <string name="textView_City_W" />
    <string name="button_return_Main">上一頁</string>
    <string name="radioButton_W1">蓮心動物醫院</string>
    <string name="radioButton_W2">愛寶動物醫院</string>
    <string name="button_enter_W">確認</string>
    <string name="textView200" />
    <string name="textView_City_T" />
    <string name="textView_T" />
    <string name="radioButton_T1">淡水動物醫院</string>
    <string name="radioButton_T2">上哲動物醫院</string>
    <string name="radioButton_T3">黃動物醫院</string>
    <string name="radioButton_T4">聖愛動物醫院</string>
    <string name="radioButton_T5">哲生動物醫院</string>
    <string name="button_return_M">上一頁</string>
    <string name="textView170" />
    <string name="button_enter_T">確認</string>
    <string name="textView100" />
    <string name="button_return_T">上一頁</string>
    <string name="button_comment">評價</string>
    <string name="textView_T_One" />
    <string name="textView133" />
    <string name="button_returnT">上一頁</string>
    <string name="button_comment_2">評價</string>
    <string name="textView_T_Two" />
    <string name="textView_W_One" />
    <string name="textView1111" />
    <string name="button_return_W">上一頁</string>
    <string name="button_comment_w">評價</string>
    <string name="textView99" />
    <string name="textView_B_One" />
    <string name="button_return_B">返回</string>
    <string name="button_comment_B">評價</string>


</resources>
