<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.myapplication_pethospital.You_comment">

    <LinearLayout
        android:layout_width="313dp"
        android:layout_height="498dp"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="6dp">

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView25" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView10" />

        <RatingBar
            android:id="@+id/ratingBar_Profession"
            android:layout_width="wrap_content"
            android:layout_height="46dp" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView21" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView15" />

        <RatingBar
            android:id="@+id/ratingBar_Equipment"
            android:layout_width="wrap_content"
            android:layout_height="45dp" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView22" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView16" />

        <RatingBar
            android:id="@+id/ratingBar_Surroundings"
            android:layout_width="wrap_content"
            android:layout_height="42dp" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView23" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView19" />

        <RatingBar
            android:id="@+id/ratingBar_Service"
            android:layout_width="wrap_content"
            android:layout_height="45dp" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView24" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            android:text="@string/textView18" />

        <RatingBar
            android:id="@+id/ratingBar_Convenience"
            android:layout_width="wrap_content"
            android:layout_height="46dp" />

        <Button
            android:id="@+id/Return_All_comment"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:text="@string/Return_All_comment" />

        <Button
            android:id="@+id/Submit_comment"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/Submit_comment" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
