<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.myapplication_pethospital.WuguActivity">

    <LinearLayout
        android:layout_width="358dp"
        android:layout_height="494dp"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.13"
            android:text="@string/textView8"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_weight="0.28"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_City_W"
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:layout_weight="1"
                android:text="@string/textView_City_W" />

            <TextView
                android:id="@+id/textView_W"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/textView_W" />
        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:layout_weight="0.51">

            <RadioButton
                android:id="@+id/radioButton_W1"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/radioButton_W1" />

            <RadioButton
                android:id="@+id/radioButton_W2"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:text="@string/radioButton_W2" />
        </RadioGroup>

        <Button
            android:id="@+id/button_return_Main"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/button_return_Main" />

        <Button
            android:id="@+id/button_enter_W"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/button_enter_W" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
