<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.myapplication_pethospital.MainActivity_Pet_Hospital">

    <LinearLayout
        android:layout_width="253dp"
        android:layout_height="471dp"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.14"
            android:text="@string/textView4" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            android:text="@string/t" />

        <Spinner
            android:id="@+id/spinner_city"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="91dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="@string/textView5" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.13"
            android:text="@string/textVie" />

        <Spinner
            android:id="@+id/spinner_area"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="182dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.14"
            android:text="@string/textView6" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.09"
            android:text="@string/textVi"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="518dp" />

        <Spinner
            android:id="@+id/spinner_time"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="282dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.14"
            android:text="@string/textView7" />

        <Button
            android:id="@+id/button_enter "
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:text="@string/button_enter4"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="372dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
